# takumi

./: CONTRIBUTING.md  Cargo.toml  README.md  biome.json  package.json
.changeset/: breezy-pans-hear.md  chatty-bats-stop.md  clear-baboons-throw.md  eighty-nails-enjoy.md  every-bottles-kick.md  fix-background-position  forty-beers-sit.md  gentle-insects-brake.md  little-parents-carry.md  petite-olives-sell.md  pretty-tips-repair.md  purple-pants-sneeze.md  quick-cooks-check.md  slow-emus-wear.md  spotty-zoos-show.md  tall-hairs-drive.md  whole-heads-tell.md  wicked-nails-hope.md  wicked-trams-drop.md  yellow-hairs-accept.md
.github/workflows/: ci.yml
docs/: package.json
docs/app/: source.ts
docs/app/components/: video.tsx
docs/app/docs/: page.tsx
docs/app/routes/: home.tsx
docs/content/docs/: index.mdx  (+4 more)
example/cloudflare-workers/: package.json
example/ffmpeg-keyframe-animation/: README.md  package.json
example/tanstack-start/: package.json
example/twitter-images/: index.tsx
takumi/: CHANGELOG.md  Cargo.toml  package.json
takumi-helpers/: CHANGELOG.md  package.json
takumi-image-response/: CHANGELOG.md  package.json
takumi-napi-core/: CHANGELOG.md  Cargo.toml  package.json
takumi-napi-core/src/: dts-header.d.ts  encode_frames_task.rs  lib.rs  load_font_task.rs  measure_task.rs  put_persistent_image_task.rs  render_animation_task.rs  render_task.rs  renderer.rs
takumi-napi-core/tests/: concurrent-load-font.test.ts  render.test.ts  render.test.tsx
takumi-wasm/: CHANGELOG.md  Cargo.toml  package.json
takumi-wasm/src/: model.rs  renderer.rs
takumi-wasm/tests/: render.test.ts
takumi/benches/: gradient.rs
takumi/src/: error.rs  keyframes.rs  lib.rs
takumi/src/layout/: inline.rs  tree.rs
takumi/src/layout/node/: image.rs  mod.rs
takumi/src/layout/style/: animation.rs  matching.rs  mod.rs  selector.rs  selector_tests.rs  stylesheets.rs
takumi/src/layout/style/properties/: animation.rs  background.rs  background_position.rs  box_shadow.rs  color.rs  conic_gradient.rs  font_feature_settings.rs  font_size.rs  font_variation_settings.rs  gradient_utils.rs  length.rs  linear_gradient.rs  mod.rs  percentage_number.rs  radial_gradient.rs  space_pair.rs  text_decoration.rs  text_shadow.rs  text_stroke.rs  transform.rs  vertical_align.rs
takumi/src/layout/style/properties/grid/: grid_template_areas.rs  grid_template_component.rs
takumi/src/layout/style/tw/: map.rs  mod.rs  parser.rs
takumi/src/rendering/: background_drawing.rs  blend.rs  canvas.rs  inline_drawing.rs  mod.rs  render.rs  text_drawing.rs  write.rs
takumi/src/rendering/components/: border.rs  shadow.rs
takumi/src/rendering/webp/: image_webp.rs  libwebp.rs  mod.rs
takumi/tests/: measure_tests.rs  test_utils.rs
takumi/tests/fixtures/: animation.rs  color_artifacts.rs  deep_nesting.rs  inline.rs  inline_vertical_align.rs  style_alignment.rs  style_backdrop_filter.rs  style_background_clip.rs  style_background_image.rs  style_clip_path.rs  style_filter.rs  style_layout.rs  style_mask_image.rs  style_mix_blend_mode.rs  style_object_fit.rs  style_object_position.rs  style_opacity.rs  style_overflow.rs  style_padding.rs  style_position.rs  style_sizing.rs  style_spacing.rs  style_text_decoration.rs  style_text_decoration_thickness.rs  style_transform.rs  style_visuals.rs  stylesheets.rs  svg.rs  text.rs
(+11 files in other folders)
